[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlayer-py"
version = "2.0.0"
description = "Deterministic validation layer for AI agents and autonomous systems"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mike Ward" }]
keywords = ["ai", "agents", "validation", "constraints", "safety", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/AILIFE1/trustlayer"
Repository = "https://github.com/AILIFE1/trustlayer"

[tool.setuptools.packages.find]
where = ["."]
include = ["trustlayer*"]
